# SecondXR

./: CMakeLists.txt  Main.qml  Point.qml  main.cpp  visioncamera.cpp  visioncamera.h
android/: AndroidManifest.xml
